config("cpr") {
  include_dirs = [
    "//third_party/cpr/include"
  ]
}

config("json") {
  include_dirs = [
    "//third_party/json/include",
  ]
}

source_set("knlp_sources") {
  public_configs = [
    ":cpr",
    ":json"
  ]

  sources = [
    "//src/nlp/nlp.cpp",
  ]

  libs = [
    "crypto",
    "cpr",
    "curl",
  ]
}

shared_library("knlp") {
  public_deps = [
    ":knlp_sources"
  ]
}

executable("knlp_app") {
  public_deps = [
    ":knlp_sources"
  ]

  sources = [
    "//src/main.cpp",
    "//src/nlp/json.cpp"
  ]
}