config("cpr") {
  include_dirs = [
    "//third_party/cpr/include"
  ]


}

config("inih") {
  include_dirs = [
    "//third_party/inih/cpp"
  ]
}

config("json") {
  include_dirs = [
    "//third_party/json/include",
  ]
}

source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp"
  ]
}

source_set("knlp_sources") {
  public_configs = [
    ":cpr",
    ":json",
    ":inih"
  ]

  deps = [
    ":ini_reader"
  ]

  sources = [
    "//src/nlp/nlp.cpp",
  ]

  libs = [
    "crypto",
    "cpr",
    "curl",
  ]
}

shared_library("knlp") {
  public_deps = [
    ":knlp_sources"
  ]
}

executable("knlp_app") {
  public_deps = [
    ":knlp_sources"
  ]

  sources = [
    "//src/main.cpp",
    "//src/nlp/json.cpp"
  ]
}