config("cpr") {
  include_dirs = [
    "//third_party/cpr/include"
  ]
}

config("json") {
  include_dirs = [
    "//third_party/json/include",
  ]
}


source_set("knlp_sources") {
  public_configs = [
    ":cpr",
    ":json"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/nlp/nlp.cpp",
  ]

  libs = [
    "crypto",
    "cpr",
    "curl",
  ]
}

