config("cpr") {
  include_dirs = [
    "//third_party/cpr/include"
  ]
}

config("json") {
  include_dirs = [
    "//third_party/json/include",
  ]
}


source_set("knlp_sources") {
  public_configs = [
    ":cpr",
    ":json"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/nlp/nlp.cpp",
  ]

  libs = [
    "crypto",
    "cpr",
    "curl",
  ]
}

shared_library("knlp") {
  public_deps = [
    "//src/nlp:knlp_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party"
  ]
}

executable("knlp_app") {
  public_deps = [
    "//src/nlp:knlp_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party"
  ]

  sources = [
    "//src/main.cpp",
    "//src/nlp/json.cpp"
  ]
}